# keyrita-revived

./: .clang-format  .gitignore  CMakeLists.txt  Controls.cpp  PlatformModules.cpp  main.cpp
external_libs/: CMakeLists.txt
gui/: Attributes.cpp  CMakeLists.txt  ControlEvent.cpp  GlfwWindow.cpp  GuiControlFactory.cpp  NkGlfwImpl.cpp  NkRenderer.cpp  XmlToUi.cpp
gui/Shaders/: ShaderBase.cpp
gui/Tests/: CMakeLists.txt  ControlTreeTests.cpp
gui/include/: App.h  AttributeFlags.h  Attributes.h  ContextManager.h  ControlAccessUtils.h  ControlEvent.h  NuklearWindowRenderer.h  OperatingSystem.h  Property.h  Registry.h  StandardControls.h  StringUtil.h  Window.h  XmlToUi.h  inc_nuk.h
gui/include/Shaders/: GuiShader.h  ShaderBase.h
gui/nk_include/: include_nuk.h  nuklear.h  nuklear_glfw_gl3.h
include/: KeyritaControls.h  PlatformModules.h
res/gui/: ExampleUI.guix  Keyrita.guix  KeyritaMenu.guix
res/gui/shaders/: DefaultShader.frag  DefaultShader.vert  HighlightEffectShader.frag
vsproj/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  keyrita.sln  keyrita.vcxproj  keyrita.vcxproj.filters
vsproj/gui/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  wgui.vcxproj  wgui.vcxproj.filters
vsproj/xml-parser/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  xml_parser.sln  xml_parser.vcxproj  xml_parser.vcxproj.filters
window/: CMakeLists.txt  GlfwWindow.cpp
xml-parser/: CMakeLists.txt  XmlParser.cpp
xml-parser/include/: XmlFile.h
